# TestDevin

./: README.md  __init__.py  config.json.example  handlers.py  handlers_test.py  hooks.py  lifecycle.py  pipeline.py  plugin.py  安装说明.txt
backend/ai-glasses-agent-backend/app/: database.py  main.py  models.py
blog-system/backend/: pyproject.toml
blog-system/backend/app/: database.py  main.py  models.py  schemas.py
blog-system/backend/app/routes/: upload.py
blog-system/frontend/: .env  package-lock.json  package.json  tailwind.config.js
blog-system/frontend/src/: App.tsx  index.css
blog-system/frontend/src/components/: PixelWorld.tsx  layout.tsx
blog-system/frontend/src/hooks/: use-toast.ts
blog-system/frontend/src/lib/: api.ts
blog-system/frontend/src/pages/: NewPost.tsx  home.tsx  post.tsx
